# tartini

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  INSTALL.txt  LICENSE.txt  README.md  README.txt  RELEASENOTES.txt  cleanup.c  gomacx  main.cpp  main.h  pitch.pro  pitch.qrc  qrc_pitch.cpp  tartini_de.ts  tartini_fr.ts
.moc/: moc_amplitudewidget.cpp  moc_cepstrumview.cpp  moc_cepstrumwidget.cpp  moc_correlationview.cpp  moc_correlationwidget.cpp  moc_debugview.cpp  moc_debugwidget.cpp  moc_drawwidget.cpp  moc_fftview.cpp  moc_fftwidget.cpp  moc_freqdrawwidget.cpp  moc_freqview.cpp  moc_freqwidgetGL.cpp  moc_gdata.cpp  moc_hblockview.cpp  moc_hblockwidget.cpp  moc_hbubbleview.cpp  moc_hbubblewidget.cpp  moc_hcircleview.cpp  moc_hcirclewidget.cpp  moc_hstackview.cpp  moc_hstackwidget.cpp  moc_htrackview.cpp  moc_htrackwidget.cpp  moc_ledindicator.cpp  moc_mainwindow.cpp  moc_myscrollbar.cpp  moc_openfiles.cpp  moc_pianoview.cpp  moc_pitchcompassdrawwidget.cpp  moc_pitchcompassview.cpp  moc_scoreview.cpp  moc_scorewidget.cpp  moc_summarydrawwidget.cpp  moc_summaryview.cpp  moc_tartinisettingsdialog.cpp  moc_timeaxis.cpp  moc_tunerview.cpp  moc_tunerwidget.cpp  moc_vibratocirclewidget.cpp  (+12 more)
cmake/Modules/: FindQwt.cmake
dialogs/: gpldialog.cpp  gpldialog.h  opendialog.cpp  opendialog.h  savedialog.cpp  savedialog.h  settingsdialog.ui  settingsdialog.ui.h  tartinidialog.cpp  tartinidialog.h  tartinisettingsdialog.cpp  tartinisettingsdialog.h
general/: bspline.cpp  bspline.h  equalloudness.cpp  equalloudness.h  fast_smooth.cpp  fast_smooth.h  fast_smooth.hpp  large_vector.h  large_vector.hpp  music_key.cpp  music_key.h  music_key.hpp  music_scale.cpp  music_scale.h  music_scale.hpp  music_temperament.cpp  music_temperament.h  music_temperament.hpp  musicnotes.cpp  musicnotes.h  musicnotes.hpp  myalgo.cpp  myalgo.h  mygl.h  mygl.hpp  myglfonts.cpp  myglfonts.h  myglfonts.hpp  myio.cpp  myio.h  mymatrix.cpp  mymatrix.h  mymatrix.hpp  myqt.cpp  myqt.h  mystring.cpp  mystring.h  mytransforms.cpp  mytransforms.h  mytransforms.hpp  (+7 more)
global/: conversions.cpp  conversions.h  gdata.cpp  gdata.h  gdata.hpp  view.cpp  view.h  view.hpp
icons/: pitch.icns
include/: RingBuffer.h  SmartPtr.h  array1d.h  array1d.hpp  array2d.h  freqpair.h  myassert.h  myqmutex.h  safe_bool.h  static.h
mac/: Info.plist
music/: music_note.cpp  music_note.h  music_note.hpp  music_scale.cpp  music_scale.hpp  music_temperament.cpp  music_temperament.h  music_temperament.hpp  musicnotes.cpp  musicnotes.h  musicnotes.hpp
rtAudio/: RtAudio.cpp  RtAudio.h  audio_stream.cpp  audio_stream.h
sound/: analysisdata.cpp  analysisdata.h  analysisdata.hpp  audio_stream.cpp  audio_stream.h  audio_thread.cpp  audio_thread.h  audio_thread.hpp  channel.cpp  channel.h  channel.hpp  filter.cpp  filter.h  notedata.cpp  notedata.h  notedata.hpp  sound_file_stream.h  sound_file_stream.hpp  sound_stream.cpp  sound_stream.h  sound_stream.hpp  soundfile.cpp  soundfile.h  soundfile.hpp  wave_stream.cpp  wave_stream.h  zoomlookup.cpp  zoomlookup.h  zoomlookup.hpp
sound/filters/: FastSmoothedAveragingFilter.cpp  FastSmoothedAveragingFilter.h  Filter.h  FixedAveragingFilter.cpp  FixedAveragingFilter.h  GrowingAveragingFilter.cpp  GrowingAveragingFilter.h  IIR_Filter.cpp  IIR_Filter.h
unix/: audio_stream.cpp  audio_stream.h
widgets/: application.h  application.hpp  drawwidget.cpp  drawwidget.h  drawwidget.hpp  ledindicator.cpp  ledindicator.h  mylabel.cpp  mylabel.h  mylabel.hpp  myscrollbar.cpp  myscrollbar.h  myscrollbar.hpp  timeaxis.cpp  timeaxis.h  timeaxis.hpp  viewwidget.cpp  viewwidget.h  widget_utils.h
widgets/base/: baseview.cpp  baseview.h  basewidget.cpp  basewidget.h
widgets/cepstrum/: cepstrumview.cpp  cepstrumview.h  cepstrumwidget.cpp  cepstrumwidget.h
widgets/correlation/: correlationview.cpp  correlationview.h  correlationwidget.cpp  correlationwidget.h
widgets/debugview/: debugview.cpp  debugview.h  debugwidget.cpp  debugwidget.h
widgets/fft/: fftview.cpp  fftview.h  fftwidget.cpp  fftwidget.h
widgets/freq/: amplitudewidget.cpp  amplitudewidget.h  amplitudewidget.hpp  freqdrawwidget.cpp  freqdrawwidget.h  freqview.cpp  freqview.h  freqwidgetGL.cpp  freqwidgetGL.h  freqwidgetGL.hpp
widgets/hblock/: hblockview.cpp  hblockview.h  hblockwidget.cpp  hblockwidget.h
widgets/hbubble/: hbubbleview.cpp  hbubbleview.h  hbubblewidget.cpp  hbubblewidget.h
widgets/hcircle/: hcircleview.cpp  hcircleview.h  hcirclewidget.cpp  hcirclewidget.h
widgets/hstack/: hstackview.cpp  hstackview.h  hstackwidget.cpp  hstackwidget.h
widgets/htrack/: htrackview.cpp  htrackview.h  htrackwidget.cpp  htrackwidget.h  htrackwidget.hpp  piano3d.cpp  piano3d.h  piano3d.hpp
widgets/mainwindow/: mainwindow.cpp  mainwindow.h  viewdata.cpp  viewdata.h
widgets/openfiles/: openfiles.cpp  openfiles.h
widgets/piano/: pianoview.cpp  pianoview.h  pianowidget.cpp  pianowidget.h  pianowidget.hpp
widgets/pitchcompass/: pitchcompassdrawwidget.cpp  pitchcompassdrawwidget.h  pitchcompassview.cpp  pitchcompassview.h
widgets/sample/: sampleview.cpp  sampleview.h  samplewidget.cpp  samplewidget.h
widgets/score/: scoresegmentiterator.cpp  scoresegmentiterator.h  scoresegmentiterator.hpp  scoreview.cpp  scoreview.h  scorewidget.cpp  scorewidget.h  scorewidget.hpp
widgets/summary/: summarydrawwidget.cpp  summarydrawwidget.h  summaryview.cpp  summaryview.h
widgets/tuner/: tunerview.cpp  tunerview.h  tunerwidget.cpp  tunerwidget.h
widgets/vibrato/: vibratocirclewidget.cpp  vibratocirclewidget.h  vibratoperiodwidget.cpp  vibratoperiodwidget.h  vibratospeedwidget.cpp  vibratospeedwidget.h  vibratotimeaxis.cpp  vibratotimeaxis.h  vibratotunerwidget.cpp  vibratotunerwidget.h  vibratoview.cpp  vibratoview.h  vibratowidget.cpp  vibratowidget.h
widgets/volumemeter/: volumemeterview.cpp  volumemeterview.h  volumemeterwidget.cpp  volumemeterwidget.h
widgets/wave/: waveview.cpp  waveview.h  wavewidget.cpp  wavewidget.h
